--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,6 +32,6 @@
 
   </div>
   
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/lightbox.css">
+<script src="{{ site.baseurl }}/assets/js/lightbox.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </footer>
